# alexbot-code

scripts/: install.sh  setup_install.sh
src/bumperbot_bringup/config/: rplidar_c1.yaml
src/bumperbot_bringup/launch/: real_robot.launch.py
src/bumperbot_controller/config/: bumperbot_controllers.yaml  joy_teleop.yaml
src/bumperbot_controller/launch/: controller.launch.py
src/bumperbot_controller/src/: simple_controller.cpp
src/bumperbot_description/: CMakeLists.txt
src/bumperbot_description/urdf/: bumperbot.urdf.xacro  bumperbot_ros2_control.xacro
src/bumperbot_firmware/: CMakeLists.txt  package.xml
src/bumperbot_localization/: CMakeLists.txt  package.xml
src/bumperbot_localization/config/: ekf.yaml
src/bumperbot_localization/launch/: local_localization.launch.py
src/simple_abot_interface/: package.xml  setup.cfg  setup.py
src/simple_abot_interface/simple_abot_interface/: simple_abot_interface.py
